<resources>
    <string name="app_name">Where is my mate</string>
    <string name="title_activity_maps">My mate is here Activity</string>

    <string name="user_name">Username :</string>
    <string name="user_full_name">Name :</string>
    <string name="user_mail">Email :</string>
    <string name="user_address">Adress :</string>
    <string name="user_city">City :</string>
    <string name="user_suite">Suite :</string>
    <string name="user_street">Street :</string>
    <string name="adress_text">Address</string>


    <string name="profile_Volunteer">Volunteer</string>
    <string name="profile_UserName">User Name</string>
    <string name="profile_PostCauses">Post Causes</string>
    <string name="profile_DollarDonate">Dollar Donate</string>
    <string name="profile_Founded">Founded</string>
    <string name="profile_Founders">Founders</string>
    <string name="profile_Goal">Goal</string>
    <string name="profile_Profile">PROFILE</string>
    <string name="profile_Years">Years</string>







</resources>
